# saas-fastapi-example

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/alembic/: README.md  env.py
app/alembic/versions/: 32f3cb01023b_add_membership.py  6608e79b98b1_add_user_table.py  e5914f0de8b3_add_companies_table.py
app/core/: account.py  config.py  db.py  deps.py  mixin.py  router.py
app/modules/auth/: actions.py  router.py
app/modules/company/: models.py  router.py
app/modules/membership/: models.py  router.py
app/modules/user/: actions.py  models.py  router.py  schemas.py
app/tests/: conftest.py
app/tests/core/: test_db.py
app/tests/fixtures/: user.py
app/tests/modules/user/: test_routes.py
docker/postgres/: init-db.sh
